--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <!-- <section class="header">
+    <section class="header">
         <div class="header__wrapper">
             <div class="header__hamburger">
                 <div class="hamburger">
@@ -54,15 +54,128 @@
                     </li>
                 </ul>
             </div>
-    </section> -->
+    </section>
 
     <section class="home">
+        <div class="home__overlay">
+            <svg xmlns="http://www.w3.org/2000/svg">
+                <rect x="0" y="0" style="width: 100%; height: 100%;" />
+            </svg>
+        </div>
+
         <div class="home__wrapper">
             <div class="home__welcome">
-                <div class="welcom"></div>
+                <div class="welcome">
+                    <div class="welcome__title">
+                        <div class="welcome__title-line"></div>
+                        <div class="welcome__title-text">
+                            Welcome To
+                            <span class="welcome__title-text _accent">Pahu Design</span>
+                        </div>
+
+                    </div>
+                    <div class="welcome__subtitle">
+                        YOU ARE IN GOOD HAND WITH US
+                    </div>
+                </div>
+            </div>
+            <div class="home__squares">
+                <div class="squares">
+                    <div class="squares__row">
+                        <div class="squares__row-item"></div>
+                        <div class="squares__row-item"></div>
+                        <div class="squares__row-item"></div>
+                    </div>
+                    <div class="squares__row">
+                        <div class="squares__row-item"></div>
+                        <div class="squares__row-item"></div>
+                        <div class="squares__row-item"></div>
+                    </div>
+                    <div class="squares__row">
+                        <div class="squares__row-item"></div>
+                        <div class="squares__row-item"></div>
+                        <div class="squares__row-item"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
+    <section class="features">
+        <div class="features__wrapper">
+            <div class="features__title">
+                <div class="title">
+                    why choose us
+                </div>
+            </div>
+
+            <div class="features__content">
+                <div class="featuers__content-item">
+                    <div class="features__list">
+                        <div class="features__item">
+                            <div class="feature">
+                                <div class="feature__info _align-right">
+                                    <div class="feature__info-title">MORDERN DESIGN</div>
+                                    <div class="feature__info-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                        ut labore et dolore magna aliqua.</div>
+                                </div>
+                                <div class="feature__icon _modern-design">
+                                    <img src="./assets/images/features/modern-design.png" alt="modern-design">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="features__item">
+                            <div class="feature">
+                                <div class="feature__info _align-right">
+                                    <div class="feature__info-title">UNIQUE QUALITY</div>
+                                    <div class="feature__info-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                        ut labore et dolore magna aliqua.</div>
+                                </div>
+                                <div class="feature__icon _unique-quality">
+                                    <img src="./assets/images/features/unique-qualitity.png" alt="Uniq">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="featuers__content-item">
+                    <div class="features__image">
+                        <img src="./assets/images/features/chair.png" alt="chair">
+                    </div>
+                </div>
+
+                <div class="featuers__content-item">
+                    <div class="features__list">
+                        <div class="features__item">
+                            <div class="feature _reverse">
+                                <div class="feature__info _align-left">
+                                    <div class="feature__info-title">HONEST PRICES</div>
+                                    <div class="feature__info-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                        ut labore et dolore magna aliqua.</div>
+                                </div>
+                                <div class="feature__icon _honest-prices">
+                                    <img src="./assets/images/features/honest-prices.png" alt="honest-prices">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="features__item">
+                            <div class="feature _reverse">
+                                <div class="feature__info _align-left">
+                                    <div class="feature__info-title">GREAT SUPPORT</div>
+                                    <div class="feature__info-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                                        ut labore et dolore magna aliqua.</div>
+                                </div>
+                                <div class="feature__icon _great-support">
+                                    <img src="./assets/images/features/great-support.png" alt="great-support">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="scripts/main.js"></script>
 </body>
 
