--- a/static/index.html
+++ b/static/index.html
@@ -176,6 +176,40 @@
         </div>
     </section>
 
+    <section class="shop">
+        <div class="shop__left">
+            <div class="shop-left">
+                <div class="shop-left__item _item-animation">
+                        <div class="shop-left__item-title">PATIO FURNITURE VIETNAM</div>
+                        <a class="shop-left__item-subtitle" href="#">VIEW DETAIL</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="shop__right">
+            <div class="shop-right">
+                <div class="shop-right__top">
+                    <div class="shop-top">
+                        <div class="shop-top__item _first _item-animation"></div>
+                        <div class="shop-top__item _second _item-animation">
+                            <div class="shop-top__item-title">DESIGN BY JARNET PARK TREND 2017</div>
+                            <a class="shop-top__item-subtitle" href="#">VIEW DETAIL</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="shop-right__bottom">
+                    <div class="shop-bottom">
+                        <div class="shop-bottom__item _first _item-animation">
+                            <div class="shop-bottom__item-title">CERAMICS WM MUNOZ</div>
+                            <a class="shop-bottom__item-subtitle" href="#">VIEW DETAIL</a>
+                        </div>
+                        <div class="shop-bottom__item _second _item-animation"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="scripts/main.js"></script>
 </body>
 
