--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <section class="header">
+    <!-- <section class="header">
         <div class="header__wrapper">
             <div class="header__hamburger">
                 <div class="hamburger">
@@ -207,6 +207,212 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="collection">
+        <div class="collection__wrapper">
+            <div class="collection__title">OUR COLLECTION</div>
+            <ul class="collection__list">
+                <li class="collection__list-item">
+                    <div class="offer">
+                        <div class="offer__overflow">
+                            <div class="overflow">
+                                <div class="overflow__bg"></div>
+                                <div class="overflow__options"></div>
+                            </div>
+                        </div>
+                        <div class="offer__label">
+                            <div class="label">
+                                <div class="label__text">NEW</div>
+                            </div>
+                        </div>
+                        <div class="offer__image">
+                            <img src="./assets/images/collection/offer_1.png" alt="Offer 1">
+                        </div>
+                        <div class="offer__title">CORONA CHAIR</div>
+                        <div class="offer__description">Printed evening dress with straight sleeves with black thin waist belt.</div>
+                        <div class="offer__price">$14.86</div>
+                    </div>
+                </li>
+
+                <li class="collection__list-item">
+                    <div class="offer">
+                        <div class="offer__overflow">
+                            <div class="overflow">
+                                <div class="overflow__bg"></div>
+                                <div class="overflow__options"></div>
+                            </div>
+                        </div>
+                        <div class="offer__image">
+                            <img src="./assets/images/collection/offer_2.png" alt="Offer 1">
+                        </div>
+                        <div class="offer__title">CORONA CHAIR</div>
+                        <div class="offer__description">Printed evening dress with straight sleeves with black thin waist belt.</div>
+                        <div class="offer__price">$14.86</div>
+                    </div>
+                </li>
+
+                <li class="collection__list-item">
+                    <div class="offer">
+                        <div class="offer__overflow">
+                            <div class="overflow">
+                                <div class="overflow__bg"></div>
+                                <div class="overflow__options"></div>
+                            </div>
+                        </div>
+                        <div class="offer__label">
+                            <div class="label">
+                                <div class="label__text">NEW</div>
+                            </div>
+                        </div>
+                        <div class="offer__image">
+                            <img src="./assets/images/collection/offer_3.png" alt="Offer 1">
+                        </div>
+                        <div class="offer__title">CORONA CHAIR</div>
+                        <div class="offer__description">Printed evening dress with straight sleeves with black thin waist belt.</div>
+                        <div class="offer__price">$14.86</div>
+                    </div>
+                </li>
+
+                <li class="collection__list-item">
+                    <div class="offer">
+                        <div class="offer__overflow">
+                            <div class="overflow">
+                                <div class="overflow__bg"></div>
+                                <div class="overflow__options"></div>
+                            </div>
+                        </div>
+                        <div class="offer__image">
+                            <img src="./assets/images/collection/offer_4.png" alt="Offer 1">
+                        </div>
+                        <div class="offer__title">CORONA CHAIR</div>
+                        <div class="offer__description">Printed evening dress with straight sleeves with black thin waist belt.</div>
+                        <div class="offer__price">$14.86</div>
+                    </div>
+                </li>
+
+                <li class="collection__list-item">
+                    <div class="offer">
+                        <div class="offer__overflow">
+                            <div class="overflow">
+                                <div class="overflow__bg"></div>
+                                <div class="overflow__options"></div>
+                            </div>
+                        </div>
+                        <div class="offer__label">
+                            <div class="label">
+                                <div class="label__text">NEW</div>
+                            </div>
+                        </div>
+                        <div class="offer__image">
+                            <img src="./assets/images/collection/offer_5.png" alt="Offer 1">
+                        </div>
+                        <div class="offer__title">CORONA CHAIR</div>
+                        <div class="offer__description">Printed evening dress with straight sleeves with black thin waist belt.</div>
+                        <div class="offer__price">$14.86</div>
+                    </div>
+                </li>
+
+                <li class="collection__list-item">
+                    <div class="offer">
+                        <div class="offer__overflow">
+                            <div class="overflow">
+                                <div class="overflow__bg"></div>
+                                <div class="overflow__options"></div>
+                            </div>
+                        </div>
+                        <div class="offer__label">
+                            <div class="label">
+                                <div class="label__text">NEW</div>
+                            </div>
+                        </div>
+                        <div class="offer__image">
+                            <img src="./assets/images/collection/offer_6.png" alt="Offer 1">
+                        </div>
+                        <div class="offer__title">CORONA CHAIR</div>
+                        <div class="offer__description">Printed evening dress with straight sleeves with black thin waist belt.</div>
+                        <div class="offer__price">$14.86</div>
+                    </div>
+                </li>
+
+                <li class="collection__list-item">
+                    <div class="offer">
+                        <div class="offer__overflow">
+                            <div class="overflow">
+                                <div class="overflow__bg"></div>
+                                <div class="overflow__options"></div>
+                            </div>
+                        </div>
+                        <div class="offer__image">
+                            <img src="./assets/images/collection/offer_7.png" alt="Offer 1">
+                        </div>
+                        <div class="offer__title">CORONA CHAIR</div>
+                        <div class="offer__description">Printed evening dress with straight sleeves with black thin waist belt.</div>
+                        <div class="offer__price">$14.86</div>
+                    </div>
+                </li>
+
+                <li class="collection__list-item">
+                    <div class="offer">
+                        <div class="offer__overflow">
+                            <div class="overflow">
+                                <div class="overflow__bg"></div>
+                                <div class="overflow__options"></div>
+                            </div>
+                        </div>
+                        <div class="offer__label">
+                            <div class="label">
+                                <div class="label__text">NEW</div>
+                            </div>
+                        </div>
+                        <div class="offer__image">
+                            <img src="./assets/images/collection/offer_8.png" alt="Offer 1">
+                        </div>
+                        <div class="offer__title">CORONA CHAIR</div>
+                        <div class="offer__description">Printed evening dress with straight sleeves with black thin waist belt.</div>
+                        <div class="offer__price">$14.86</div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section> -->
+
+    <section class="designers">
+        <div class="designers__wrapper">
+            <div class="designers__title">
+                OUR DESIGNER
+                <div class="designers__border">
+                    <div class="border"></div>
+                </div>
+            </div>
+
+            <ul class="designers__list">
+                <li class="designers__list-item">
+                    <div class="designer">
+                        <div class="designer__photo">
+                            <img src="" alt="">
+                        </div>
+                        <div class="designer__name">Bertil Stam</div>
+                    </div>
+                </li>
+                <li class="designers__list-item">
+                    <div class="designer">
+                        <div class="designer__photo">
+                            <img src="" alt="">
+                        </div>
+                        <div class="designer__name">Janet Park</div>
+                    </div>
+                </li>
+                <li class="designers__list-item">
+                    <div class="designer">
+                        <div class="designer__photo">
+                            <img src="" alt="">
+                        </div>
+                        <div class="designer__name">Wm Munoz</div>
+                    </div>
+                </li>
+            </ul>
         </div>
     </section>
 
